#7335 bug(style): Rich text table overflow fix, removed bottom margin from nested lists

--- a/src/assets/styles/20-tools/_extends/_typography.scss
+++ b/src/assets/styles/20-tools/_extends/_typography.scss
@@ -120,6 +120,11 @@
 %list-base {
   margin: 0 0 calc(4 * var(--space-unit));
   padding-left: calc(2 * var(--space-unit));
+
+  ol,
+  ul {
+    margin-bottom: 0;
+  }
 }
 
 /* Alignment */
